--- a/CovidVaccination/src/main/resources/application.properties
+++ b/CovidVaccination/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8088
 
 #db specific properties
-spring.datasource.url=jdbc:mysql://localhost:3306/Product
+spring.datasource.url=jdbc:mysql://localhost:3306/CovidVaccination
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
