--- a/CovidVaccination/src/main/resources/application.properties
+++ b/CovidVaccination/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+
+spring.jackson.date-format=com.fasterxml.jackson.databind.util.ISO8601DateFormat
+spring.jackson.time-zone=UTC
